# datakb

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  implementation_plan.md
.github/workflows/: ci.yml
backend/: alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
backend/auth/: local.py  middleware.py
backend/db/: engine.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial.py
backend/routers/: auth.py  graph.py  health.py  setup.py
backend/services/storage/: __init__.py  base.py  local.py
backend/tests/: conftest.py  test_graph.py  test_storage_local.py
client/: README.md  pyproject.toml
client/kb_client/: __init__.py
deploy/: docker-compose.prod.yml  docker-compose.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  graph.ts
frontend/src/components/: LoginPage.tsx  SetupPage.tsx
frontend/src/components/graph/: EdgeRenderer.tsx  EmptyGraphState.tsx  GraphPage.tsx  NodeDetailPanel.tsx  NodeRenderer.tsx  TopBar.tsx  nodeConfig.ts
frontend/src/components/node-editor/: MetadataTab.tsx  NodeEditorPage.tsx  RelationshipsTab.tsx
frontend/src/stores/: authStore.ts  graphStore.ts
frontend/src/types/: index.ts
references/: openapi.yaml  spec.md  ui-design.html
